task3-istio/canary/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule

metadata:
  name: ledger-api
  namespace: payments

spec:

  host: ledger-api

  subsets:

    - name: v1
      labels:
        version: v1

    - name: v2
      labels:
        version: v2
